syntax = "proto3";

package rapid.admin_api.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "rapid/admin_api/v1/model_asset.proto";

message CreateAssetPresignedURLRequest {
  AssetType asset_type = 1;
  ContentType content_type = 2;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "asset_type",
        "content_type"
      ]
    }
  };
}

message CreateAssetPresignedURLResponse {
  string asset_id = 1;
  string presigned_url = 2;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "asset_id",
        "presigned_url"
      ]
    }
  };
}
